force-app/main/default/objects/Task__c/fields/Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Date__c</fullName>
    <label>Follow Up Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>