force-app/main/default/objects/Task__c/fields/Subject_Text__c.field-meta.xml
<CustomField>
    <fullName>Subject_Text__c</fullName>
    <label>Subject Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>