force-app/main/default/objects/Task__c/validationRules/ValidateCurrentUser.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateCurrentUser</fullName>
    <active>false</active>
    <errorConditionFormula>Assigned_From__r.Id  &lt;&gt; $User.Id</errorConditionFormula>
    <errorDisplayField>Assigned_From__c</errorDisplayField>
    <errorMessage>You can only assign this task from yourself. The &apos;Assigned From&apos; field must match the currently logged-in user. Please select yourself as the value, and do not assign it from another user.</errorMessage>
</ValidationRule>